fixed spacing in footer

--- a/users/SongPham/cfyc/app/stylesheets/main.scss
+++ b/users/SongPham/cfyc/app/stylesheets/main.scss
@@ -309,7 +309,7 @@ footer {
                 }
         }
     }
-    p { color: $white; text-align: center; @include font-size(14px); margin-bottom: 0px; padding: 50px; }
+    p { color: #666666; text-align: center; @include font-size(14px); margin-bottom: 0px; padding: 50px; }
 }
 /* media queries */
 /*@media only screen and (max-width: 20em) {
